[package]
name = "dn42-roa-generator"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

tokio = { version = "1", features = ["full"] }
axum = "0.8"

tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = "0.1.18"
strum = { version = "0.27.2", features = ["derive"] }
